# docto-trace-storage

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
docto_trace/: __init__.py  __main__.py  cli.py  config.py
docto_trace/auth/: __init__.py  google_drive.py  token_store.py
docto_trace/commands/: __init__.py  login.py  logout.py  onboard.py  report.py  scan.py  setup.py  ui.py
docto_trace/connectors/: __init__.py  base.py  google_drive.py  local.py
docto_trace/data/: __init__.py
docto_trace/engine/: __init__.py  ai_readiness.py  analytics.py  auditor.py  traversal.py
docto_trace/schemas/: __init__.py  report.py  storage.py
docto_trace/ui/: __init__.py  app.py
docto_trace/ui/.streamlit/: config.toml
skill/: README_SKILL.md
skill/docto-trace-storage/: SKILL.md
skill/docto-trace-storage/resources/: ACTION_PLAN_GUIDE.md  COMMANDS_REFERENCE.md  EXAMPLES.md  REPORT_SCHEMA.md
skill/docto-trace-storage/scripts/: analyze_report.py  requirements.txt  run_scan.py
tests/: test_ai_readiness.py  test_analytics.py  test_auditor.py  test_schemas.py
